# ejflab-ai

./: README.md  app.mjs  package.json  tsconfig.app.json
c++/audiosfft/: Audiosfft.cpp  Audiosfft.h  BulkAudio.cpp  CMakeLists.txt  audio.h  leame.txt  leameFfmpeg.txt  recordPlay.cpp  utils.h
c++/audiosfft/data/: example.json  output.json
c++/calibrate/: CMakeLists.txt  solvePnP.cpp  solvePnP.h  utils.h
c++/kinect/: kinect.txt
c++/kinect/kinect2pipe/: CMakeLists.txt  kinect2pipe.cpp  kinect2pipe.h
c++/utils/: shared-libs.js
flowcharts/milvus/: flow01milvus.json
flowcharts/processors/: processors.json
src/: index.html  styles.css
src/app/: app-routing.module.ts  app.module.ts  buttons.css  containers.css  fonts.css  popup.css
src/app/views/body/: body.component.css  body.component.html  body.component.ts  body.module.ts
src/app/views/calendar/: calendar.component.css  calendar.component.html  calendar.component.ts
src/app/views/cv/: cv.component.html  cv.component.ts  cv.module.ts
src/app/views/ejflabmodule/: ejflabbase.component.ts  ejflabmodule-routing.module.ts  ejflabmodule.component.css  ejflabmodule.component.html  ejflabmodule.component.ts  ejflabmodule.module.ts
src/app/views/ejflabmodule/components/ingest/: ingest.component.css  ingest.component.html  ingest.component.ts
src/app/views/ejflabmodule/components/knowledge-list/: knowledge-list.component.html  (+1 more)
src/app/views/ejflabmodule/services/: cloudManager.service.ts  configRac.service.ts  knowledge.service.ts  llm.service.ts  racDatabase.service.ts  speech2text.service.ts  text2speech.service.ts
src/app/views/humanpose/: humanpose-routing.module.ts  humanpose.component.css  humanpose.component.html  humanpose.component.ts  humanpose.module.ts
src/app/views/img2mesh/: img2mesh-routing.module.ts  img2mesh.component.css  img2mesh.component.html  img2mesh.component.ts  img2mesh.module.ts
src/app/views/img2mesh/services/: img2mesh.service.ts
src/app/views/projection/: projection.component.css  projection.component.html  projection.component.ts  projection.module.ts
src/app/views/tensorflow/: tensorflow.module.ts
src/app/views/tensorflow/tensorflow/: tensorflow.component.css  tensorflow.component.html  tensorflow.component.ts
src/app/views/tensorflow/tensorflowtrain/: tensorflowtrain.component.html  tensorflowtrain.component.ts
src/app/views/threejs/: threejs.module.ts
src/app/views/threejs/threejs/: BasicScene.ts
src/app/views/threejs/threejs-body/: BasicScene.ts  MyAsset.ts  MyHelper.ts  WalkBody.ts  threejs-body.component.css  threejs-body.component.ts  types.ts
src/app/views/threejs/threejs-camera/: threejs-camera.component.css  threejs-camera.component.html  threejs-camera.component.ts
src/app/views/threejs/threejs-gallery/: BasicScene.ts  threejs-gallery.component.ts
src/app/views/threejs/threejs-projection/: BasicScene.ts  threejs-projection.component.css  threejs-projection.component.html  threejs-projection.component.ts
src/app/views/threejs/threejs-vr/: BasicScene.ts
src/assets/css/: buttons.css  forms.css
src/assets/db/: knowledge.txt
src/assets/fonts/: Confortaa.css
src/assets/models/: scene2.gltf
src/assets/models/assets/: ball.glb
srcJs/: tracker.js
srv/ejflab/: ComputeEngineSrv.mjs  EjflabSrv.mjs  ImagiationSrv.mjs  RACServices.mjs
srv/ejflab/sql/create/: rac_schema.sql  rac_table.sql
srv/ejflab/sql/db/: knowledge.sql
srv/ejflab/sql/delete/: rac_schema.sql  rac_table.sql
srv/ejflab/sql/read/: knowledge_page.sql  schemas.sql  tables_of_schema.sql
(+53 files in other folders)
